[gd_scene load_steps=2 format=3 uid="uid://faulsyhhddoi"]

[ext_resource type="Script" uid="uid://5yedvhplb2cl" path="res://addons/diisis/editor/src/custom_default_container.gd" id="1_fvb33"]

[node name="CustomDefaultContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fvb33")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="MethodSearch" type="LineEdit" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="HSplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer/PanelContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/PanelContainer/VSplitContainer"]
layout_mode = 2
text = "Set default overrides. Any method called by diisis will have 2 steps of defaut applied. First the one set in the function signature in instruction handler scripts. Then the ones you set here.
use them with a * in function calls"
fit_content = true
scroll_active = false

[node name="GridContainer" type="GridContainer" parent="HSplitContainer/PanelContainer/VSplitContainer"]
layout_mode = 2
columns = 3

[connection signal="text_changed" from="HSplitContainer/VBoxContainer/MethodSearch" to="." method="_on_method_search_text_changed"]
[connection signal="item_selected" from="HSplitContainer/VBoxContainer/ItemList" to="." method="_on_item_list_item_selected"]
